feat: remove pulsar/ktor dependency from cdt-kotlin-client to keep it pure